--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -33,7 +33,7 @@
                 <h1> I Love to Design.</h1>
                 <p></p>
                 <a class="button1" href="http://">Hire me</a>
-                <a class="button2" href="http://">View Portfolio -></a>
+                <a class="button2" href="http://">View portlio -></a>
 
                 <ul>
                     <li><a href="">Facebook</a></li>
@@ -105,32 +105,24 @@
 
         <div id="portfolio" class="portfolio">
             <span>PORTFOLIO</span>
-            <h1>This is My Expertise, The Services I'll Provide My Clients</h1>
+            <h1>TMy Latest Work</h1>
        
         <div class="portfolio-row">
-            <div class="portfo service-1">
-                <h3> Web Development</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts.</p>
-
-                <a href="#">Read more -></a>
+            <div class="port port-1">
+            <img class="img1" src="images/portfolio4.PNG" alt="">
             </div>
 
-            <div class="portfo service-2">
-                <h3> App Development</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts.</p>
-
-                <a href="#">Read more -></a>
+            <div class="port port-2">                
+            <img class="img2" src="images/portfolio3.PNG" alt="">
             </div>
         
-            <div class="portfo service-3">
-                <h3> Graphics Design</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-                    the blind texts.</p>
-
-                <a href="#">Read more -></a>
+            <div class="port port-3">               
+            <img class="img3" src="images/portfolio2.PNG" alt="">
             </div>
+
+            <div class="port port-4">               
+                <img class="img4" src="images/portfolio1.PNG" alt="">
+                </div>
         </div>
 
         </div>
@@ -139,7 +131,7 @@
             <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.5751965780405!2d3.492149614770971!3d6.575172795244701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bedfb4212db43%3A0x9f08bd17fc3b8c18!2sOnabajo%20Ave%2C%20Ikorodu%20104102%2C%20Ikorodu!5e0!3m2!1sen!2sng!4v1647877111576!5m2!1sen!2sng"
-                    width="100%" height="650px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="100%" height="700px" style="border: none;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="contact-us">
                 <h2>Contact us</h2>
@@ -204,12 +196,12 @@
             <div class="col col-1">
                     <h2>
                         <a href="#home">
-                            Kn.Ford
+                           Oluwakeji Onabajo
                         </a>
                     </h2>
                     <p>A small river named Duden flows by their place and supplies it with the necessary
                         regelialia.</p>
-                    <ul class="ftco-footer-social list-unstyled mt-2">
+                    <ul class="social">
                         <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="#"><span class="fa fa-instagram"></span></a></li>
